--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: 100px;
-  background-color: #791868;
+  background-color: #131212;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,4 +18,5 @@
 
 .footer p {
   color: white;
+  padding-bottom: 10px;
 }
